# labelize

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e-integration.yml
docs/: DIFF_THRESHOLDS.md  ZPL_COMMANDS_REFERENCE.md
e2e/cli/: test_cli.sh
e2e/http/: test_http.sh
examples/: compare_renders.rs  dump_renders.rs
src/: lib.rs  main.rs
src/assets/: mod.rs
src/barcodes/: aztec.rs  bit_matrix.rs  code128.rs  code39.rs  datamatrix.rs  ean13.rs  maxicode.rs  mod.rs  pdf417.rs  qrcode.rs  twooffive.rs
src/drawers/: drawer_state.rs  mod.rs  renderer.rs
src/elements/: barcode_128.rs  barcode_2of5.rs  barcode_39.rs  barcode_aztec.rs  barcode_datamatrix.rs  barcode_ean13.rs  barcode_pdf417.rs  barcode_qr.rs  field_info.rs  graphic_box.rs  graphic_circle.rs  graphic_diagonal_line.rs  graphic_field.rs  label_element.rs  maxicode.rs  mod.rs  stored_format.rs  text_field.rs
src/encodings/: mod.rs
src/hex/: mod.rs
src/images/: mod.rs  monochrome.rs  pdf.rs
src/parsers/: command_utils.rs  epl_parser.rs  fs.rs  mod.rs  virtual_printer.rs  zpl_parser.rs
testdata/: amazonshipping.zpl  auspost.zpl  bpost.zpl  canadapost.zpl  colissimo.zpl  correos.zpl  dbschenker.zpl  dpdde.zpl  evri.zpl  inpost.zpl  ontrac.zpl  postnl.zpl  purolator.zpl  royalmail.zpl  seur.zpl  tnt_express.zpl  yodel.zpl
testdata/diffs/: diff_report.txt  diff_report_labels.txt  diff_report_unit.txt
tests/: e2e_diff_report.rs  e2e_golden.rs  unit.rs  unit_barcodes.rs  unit_golden_png_dimensions.rs  unit_hex_encoding.rs  unit_renderer.rs
(+32 files in other folders)
