[package]
name = "labelize"
version = "0.1.0"
edition = "2021"
description = "Fast Rust engine to parse ZPL & EPL label data and render to PNG/PDF. CLI, HTTP microservice, or library. Open-source Labelary alternative."
keywords = ["zpl", "epl", "label", "barcode", "thermal-printer"]
categories = ["command-line-utilities", "graphics", "parsing", "web-programming"]
repository = "https://github.com/GOODBOY008/labelize"
homepage = "https://github.com/GOODBOY008/labelize"
license = "MIT"
readme = "README.md"

[dependencies]
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
lopdf = "0.34"
flate2 = "1"
base64 = "0.22"
datamatrix = "0.3"
pdf417 = "0.2.1"
qrcode = "0.14"
rxing = { version = "0.8", default-features = false, features = ["encoding_rs"] }
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
